// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterReach - Snapshots > matches snapshot in uncontrolled mode with defaultSelectedTab 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Reach
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class=""
    data-cy="filter-reach-radiogroup"
    data-testid="filter-reach-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex-col flex"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <button
        aria-checked="false"
        aria-label="All"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-cy="all-reach-toggle"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-radio h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.247 7.761a6 6 0 0 1 0 8.478"
          />
          <path
            d="M19.075 4.933a10 10 0 0 1 0 14.134"
          />
          <path
            d="M4.925 19.067a10 10 0 0 1 0-14.134"
          />
          <path
            d="M7.753 16.239a6 6 0 0 1 0-8.478"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Following"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-cy="following-reach-toggle"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="24"
          viewBox="0 0 20 20"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.00016 17.5C5.00016 15.7319 5.70254 14.0362 6.95278 12.786C8.20303 11.5357 9.89872 10.8333 11.6668 10.8333M11.6668 10.8333C13.4349 10.8333 15.1306 11.5357 16.3809 12.786C17.6311 14.0362 18.3335 15.7319 18.3335 17.5M11.6668 10.8333C9.36564 10.8333 7.50016 8.96785 7.50016 6.66667C7.50016 4.36548 9.36564 2.5 11.6668 2.5C13.968 2.5 15.8335 4.36548 15.8335 6.66667C15.8335 8.96785 13.968 10.8333 11.6668 10.8333ZM1.66679 16.6666C1.66679 13.8583 3.33346 11.25 5.00012 9.99996C4.45227 9.58893 4.01419 9.0492 3.72465 8.42852C3.43511 7.80784 3.30303 7.12535 3.34011 6.44146C3.37719 5.75757 3.58227 5.09336 3.93723 4.50763C4.29218 3.92189 4.78605 3.43268 5.37512 3.08329"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <span
          class=""
        >
          Following
        </span>
      </button>
      <button
        aria-checked="true"
        aria-label="Friends"
        aria-pressed="true"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
        data-cy="friends-reach-toggle"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart-handshake h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.414 14.414C21 12.828 22 11.5 22 9.5a5.5 5.5 0 0 0-9.591-3.676.6.6 0 0 1-.818.001A5.5 5.5 0 0 0 2 9.5c0 2.3 1.5 4 3 5.5l5.535 5.362a2 2 0 0 0 2.879.052 2.12 2.12 0 0 0-.004-3 2.124 2.124 0 1 0 3-3 2.124 2.124 0 0 0 3.004 0 2 2 0 0 0 0-2.828l-1.881-1.882a2.41 2.41 0 0 0-3.409 0l-1.71 1.71a2 2 0 0 1-2.828 0 2 2 0 0 1 0-2.828l2.823-2.762"
          />
        </svg>
        <span
          class=""
        >
          Friends
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`FilterReach - Snapshots > matches snapshot with All selected tab 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Reach
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class=""
    data-cy="filter-reach-radiogroup"
    data-testid="filter-reach-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex-col flex"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <button
        aria-checked="true"
        aria-label="All"
        aria-pressed="true"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
        data-cy="all-reach-toggle"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-radio h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.247 7.761a6 6 0 0 1 0 8.478"
          />
          <path
            d="M19.075 4.933a10 10 0 0 1 0 14.134"
          />
          <path
            d="M4.925 19.067a10 10 0 0 1 0-14.134"
          />
          <path
            d="M7.753 16.239a6 6 0 0 1 0-8.478"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Following"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-cy="following-reach-toggle"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="24"
          viewBox="0 0 20 20"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.00016 17.5C5.00016 15.7319 5.70254 14.0362 6.95278 12.786C8.20303 11.5357 9.89872 10.8333 11.6668 10.8333M11.6668 10.8333C13.4349 10.8333 15.1306 11.5357 16.3809 12.786C17.6311 14.0362 18.3335 15.7319 18.3335 17.5M11.6668 10.8333C9.36564 10.8333 7.50016 8.96785 7.50016 6.66667C7.50016 4.36548 9.36564 2.5 11.6668 2.5C13.968 2.5 15.8335 4.36548 15.8335 6.66667C15.8335 8.96785 13.968 10.8333 11.6668 10.8333ZM1.66679 16.6666C1.66679 13.8583 3.33346 11.25 5.00012 9.99996C4.45227 9.58893 4.01419 9.0492 3.72465 8.42852C3.43511 7.80784 3.30303 7.12535 3.34011 6.44146C3.37719 5.75757 3.58227 5.09336 3.93723 4.50763C4.29218 3.92189 4.78605 3.43268 5.37512 3.08329"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <span
          class=""
        >
          Following
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Friends"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-cy="friends-reach-toggle"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart-handshake h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.414 14.414C21 12.828 22 11.5 22 9.5a5.5 5.5 0 0 0-9.591-3.676.6.6 0 0 1-.818.001A5.5 5.5 0 0 0 2 9.5c0 2.3 1.5 4 3 5.5l5.535 5.362a2 2 0 0 0 2.879.052 2.12 2.12 0 0 0-.004-3 2.124 2.124 0 1 0 3-3 2.124 2.124 0 0 0 3.004 0 2 2 0 0 0 0-2.828l-1.881-1.882a2.41 2.41 0 0 0-3.409 0l-1.71 1.71a2 2 0 0 1-2.828 0 2 2 0 0 1 0-2.828l2.823-2.762"
          />
        </svg>
        <span
          class=""
        >
          Friends
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`FilterReach - Snapshots > matches snapshot with Following selected 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Reach
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class=""
    data-cy="filter-reach-radiogroup"
    data-testid="filter-reach-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex-col flex"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <button
        aria-checked="false"
        aria-label="All"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-cy="all-reach-toggle"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-radio h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.247 7.761a6 6 0 0 1 0 8.478"
          />
          <path
            d="M19.075 4.933a10 10 0 0 1 0 14.134"
          />
          <path
            d="M4.925 19.067a10 10 0 0 1 0-14.134"
          />
          <path
            d="M7.753 16.239a6 6 0 0 1 0-8.478"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </button>
      <button
        aria-checked="true"
        aria-label="Following"
        aria-pressed="true"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
        data-cy="following-reach-toggle"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
        type="button"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="24"
          viewBox="0 0 20 20"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.00016 17.5C5.00016 15.7319 5.70254 14.0362 6.95278 12.786C8.20303 11.5357 9.89872 10.8333 11.6668 10.8333M11.6668 10.8333C13.4349 10.8333 15.1306 11.5357 16.3809 12.786C17.6311 14.0362 18.3335 15.7319 18.3335 17.5M11.6668 10.8333C9.36564 10.8333 7.50016 8.96785 7.50016 6.66667C7.50016 4.36548 9.36564 2.5 11.6668 2.5C13.968 2.5 15.8335 4.36548 15.8335 6.66667C15.8335 8.96785 13.968 10.8333 11.6668 10.8333ZM1.66679 16.6666C1.66679 13.8583 3.33346 11.25 5.00012 9.99996C4.45227 9.58893 4.01419 9.0492 3.72465 8.42852C3.43511 7.80784 3.30303 7.12535 3.34011 6.44146C3.37719 5.75757 3.58227 5.09336 3.93723 4.50763C4.29218 3.92189 4.78605 3.43268 5.37512 3.08329"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <span
          class=""
        >
          Following
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Friends"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-cy="friends-reach-toggle"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart-handshake h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.414 14.414C21 12.828 22 11.5 22 9.5a5.5 5.5 0 0 0-9.591-3.676.6.6 0 0 1-.818.001A5.5 5.5 0 0 0 2 9.5c0 2.3 1.5 4 3 5.5l5.535 5.362a2 2 0 0 0 2.879.052 2.12 2.12 0 0 0-.004-3 2.124 2.124 0 1 0 3-3 2.124 2.124 0 0 0 3.004 0 2 2 0 0 0 0-2.828l-1.881-1.882a2.41 2.41 0 0 0-3.409 0l-1.71 1.71a2 2 0 0 1-2.828 0 2 2 0 0 1 0-2.828l2.823-2.762"
          />
        </svg>
        <span
          class=""
        >
          Friends
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`FilterReach - Snapshots > matches snapshot with Friends selected 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Reach
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class=""
    data-cy="filter-reach-radiogroup"
    data-testid="filter-reach-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex-col flex"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <button
        aria-checked="false"
        aria-label="All"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-cy="all-reach-toggle"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-radio h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.247 7.761a6 6 0 0 1 0 8.478"
          />
          <path
            d="M19.075 4.933a10 10 0 0 1 0 14.134"
          />
          <path
            d="M4.925 19.067a10 10 0 0 1 0-14.134"
          />
          <path
            d="M7.753 16.239a6 6 0 0 1 0-8.478"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Following"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-cy="following-reach-toggle"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="24"
          viewBox="0 0 20 20"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.00016 17.5C5.00016 15.7319 5.70254 14.0362 6.95278 12.786C8.20303 11.5357 9.89872 10.8333 11.6668 10.8333M11.6668 10.8333C13.4349 10.8333 15.1306 11.5357 16.3809 12.786C17.6311 14.0362 18.3335 15.7319 18.3335 17.5M11.6668 10.8333C9.36564 10.8333 7.50016 8.96785 7.50016 6.66667C7.50016 4.36548 9.36564 2.5 11.6668 2.5C13.968 2.5 15.8335 4.36548 15.8335 6.66667C15.8335 8.96785 13.968 10.8333 11.6668 10.8333ZM1.66679 16.6666C1.66679 13.8583 3.33346 11.25 5.00012 9.99996C4.45227 9.58893 4.01419 9.0492 3.72465 8.42852C3.43511 7.80784 3.30303 7.12535 3.34011 6.44146C3.37719 5.75757 3.58227 5.09336 3.93723 4.50763C4.29218 3.92189 4.78605 3.43268 5.37512 3.08329"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <span
          class=""
        >
          Following
        </span>
      </button>
      <button
        aria-checked="true"
        aria-label="Friends"
        aria-pressed="true"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
        data-cy="friends-reach-toggle"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart-handshake h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.414 14.414C21 12.828 22 11.5 22 9.5a5.5 5.5 0 0 0-9.591-3.676.6.6 0 0 1-.818.001A5.5 5.5 0 0 0 2 9.5c0 2.3 1.5 4 3 5.5l5.535 5.362a2 2 0 0 0 2.879.052 2.12 2.12 0 0 0-.004-3 2.124 2.124 0 1 0 3-3 2.124 2.124 0 0 0 3.004 0 2 2 0 0 0 0-2.828l-1.881-1.882a2.41 2.41 0 0 0-3.409 0l-1.71 1.71a2 2 0 0 1-2.828 0 2 2 0 0 1 0-2.828l2.823-2.762"
          />
        </svg>
        <span
          class=""
        >
          Friends
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`FilterReach - Snapshots > matches snapshot with default props (All selected) 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Reach
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class=""
    data-cy="filter-reach-radiogroup"
    data-testid="filter-reach-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex-col flex"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <button
        aria-checked="true"
        aria-label="All"
        aria-pressed="true"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
        data-cy="all-reach-toggle"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-radio h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.247 7.761a6 6 0 0 1 0 8.478"
          />
          <path
            d="M19.075 4.933a10 10 0 0 1 0 14.134"
          />
          <path
            d="M4.925 19.067a10 10 0 0 1 0-14.134"
          />
          <path
            d="M7.753 16.239a6 6 0 0 1 0-8.478"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Following"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-cy="following-reach-toggle"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="24"
          viewBox="0 0 20 20"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.00016 17.5C5.00016 15.7319 5.70254 14.0362 6.95278 12.786C8.20303 11.5357 9.89872 10.8333 11.6668 10.8333M11.6668 10.8333C13.4349 10.8333 15.1306 11.5357 16.3809 12.786C17.6311 14.0362 18.3335 15.7319 18.3335 17.5M11.6668 10.8333C9.36564 10.8333 7.50016 8.96785 7.50016 6.66667C7.50016 4.36548 9.36564 2.5 11.6668 2.5C13.968 2.5 15.8335 4.36548 15.8335 6.66667C15.8335 8.96785 13.968 10.8333 11.6668 10.8333ZM1.66679 16.6666C1.66679 13.8583 3.33346 11.25 5.00012 9.99996C4.45227 9.58893 4.01419 9.0492 3.72465 8.42852C3.43511 7.80784 3.30303 7.12535 3.34011 6.44146C3.37719 5.75757 3.58227 5.09336 3.93723 4.50763C4.29218 3.92189 4.78605 3.43268 5.37512 3.08329"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <span
          class=""
        >
          Following
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Friends"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-cy="friends-reach-toggle"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart-handshake h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.414 14.414C21 12.828 22 11.5 22 9.5a5.5 5.5 0 0 0-9.591-3.676.6.6 0 0 1-.818.001A5.5 5.5 0 0 0 2 9.5c0 2.3 1.5 4 3 5.5l5.535 5.362a2 2 0 0 0 2.879.052 2.12 2.12 0 0 0-.004-3 2.124 2.124 0 1 0 3-3 2.124 2.124 0 0 0 3.004 0 2 2 0 0 0 0-2.828l-1.881-1.882a2.41 2.41 0 0 0-3.409 0l-1.71 1.71a2 2 0 0 1-2.828 0 2 2 0 0 1 0-2.828l2.823-2.762"
          />
        </svg>
        <span
          class=""
        >
          Friends
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`FilterReach - Snapshots > matches snapshot with disabled state 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Reach
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class=""
    data-cy="filter-reach-radiogroup"
    data-testid="filter-reach-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex-col flex"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <button
        aria-checked="true"
        aria-disabled="true"
        aria-label="All"
        aria-pressed="true"
        class="flex gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1 cursor-default opacity-40"
        data-cy="all-reach-toggle"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-radio h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.247 7.761a6 6 0 0 1 0 8.478"
          />
          <path
            d="M19.075 4.933a10 10 0 0 1 0 14.134"
          />
          <path
            d="M4.925 19.067a10 10 0 0 1 0-14.134"
          />
          <path
            d="M7.753 16.239a6 6 0 0 1 0-8.478"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </button>
      <button
        aria-checked="false"
        aria-disabled="true"
        aria-label="Following"
        aria-pressed="false"
        class="flex gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1 cursor-default opacity-40"
        data-cy="following-reach-toggle"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="24"
          viewBox="0 0 20 20"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.00016 17.5C5.00016 15.7319 5.70254 14.0362 6.95278 12.786C8.20303 11.5357 9.89872 10.8333 11.6668 10.8333M11.6668 10.8333C13.4349 10.8333 15.1306 11.5357 16.3809 12.786C17.6311 14.0362 18.3335 15.7319 18.3335 17.5M11.6668 10.8333C9.36564 10.8333 7.50016 8.96785 7.50016 6.66667C7.50016 4.36548 9.36564 2.5 11.6668 2.5C13.968 2.5 15.8335 4.36548 15.8335 6.66667C15.8335 8.96785 13.968 10.8333 11.6668 10.8333ZM1.66679 16.6666C1.66679 13.8583 3.33346 11.25 5.00012 9.99996C4.45227 9.58893 4.01419 9.0492 3.72465 8.42852C3.43511 7.80784 3.30303 7.12535 3.34011 6.44146C3.37719 5.75757 3.58227 5.09336 3.93723 4.50763C4.29218 3.92189 4.78605 3.43268 5.37512 3.08329"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <span
          class=""
        >
          Following
        </span>
      </button>
      <button
        aria-checked="false"
        aria-disabled="true"
        aria-label="Friends"
        aria-pressed="false"
        class="flex gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1 cursor-default opacity-40"
        data-cy="friends-reach-toggle"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart-handshake h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.414 14.414C21 12.828 22 11.5 22 9.5a5.5 5.5 0 0 0-9.591-3.676.6.6 0 0 1-.818.001A5.5 5.5 0 0 0 2 9.5c0 2.3 1.5 4 3 5.5l5.535 5.362a2 2 0 0 0 2.879.052 2.12 2.12 0 0 0-.004-3 2.124 2.124 0 1 0 3-3 2.124 2.124 0 0 0 3.004 0 2 2 0 0 0 0-2.828l-1.881-1.882a2.41 2.41 0 0 0-3.409 0l-1.71 1.71a2 2 0 0 1-2.828 0 2 2 0 0 1 0-2.828l2.823-2.762"
          />
        </svg>
        <span
          class=""
        >
          Friends
        </span>
      </button>
    </div>
  </div>
</div>
`;
